Fixes the header being covered in wapuu bees

--- a/2017-initial.css
+++ b/2017-initial.css
@@ -141,7 +141,7 @@ img {
 	max-width: 100%;
 }
 
-img:after {
+/*img:after {
 	background-image: url('https://2016.manchester.wordcamp.org/files/2016/07/worker-bee.png');
 	content: attr(alt);
 	display: block;
@@ -151,7 +151,7 @@ img:after {
 	left: 0;
 	width: 100%;
 	height: 100%;
-}
+}*/
 
 img.alignright {
 	float: right;
